WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43127
Fix forward declares in Chromium font interface
https://bugs.webkit.org/show_bug.cgi?id=43127
Summary
Fix forward declares in Chromium font interface
Brett Wilson
Reported
2010-07-28 10:31:57 PDT
I accidentally forward declared a bunch of things class that should be struct
Attachments
Patch
(990 bytes, patch)
2010-07-28 10:34 PDT
,
Brett Wilson
fishd
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brett Wilson
Comment 1
2010-07-28 10:34:10 PDT
Created
attachment 62846
[details]
Patch
Brett Wilson
Comment 2
2010-07-28 12:45:14 PDT
Fixed in
r64220
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug