2010-07-28  Brett Wilson  <brettw@chromium.org>

Reviewed by Darin Fisher.

        Fix forward declares to be struct instead of class.
        https://bugs.webkit.org/show_bug.cgi?id=43127

        * public/WebFont.h:

Canonical link: https://commits.webkit.org/55046@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64220 268f45cc-cd09-0410-ab3c-d52691b4dbfc